<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="nav_back_icon">nav_back_icon</string>
    <string name="details">Details</string>
    <string name="dot">.</string>
    <string name="revenue">Revenue:</string>
    <string name="budget">Budget:</string>
    <string name="back_icon">back_icon</string>
    <string name="movie_title">movie_title</string>
</resources>